# farmbot-advisor

./: Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
app/: environment.py  main.py  models.py
server/: app.py  farmbot_environment.py
